--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seeds": "node seeds/seeds.js"
   },
   "repository": {
     "type": "git",
